mtls-disable.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "default"
  namespace : ipk
spec:
  mtls:
    mode: DISABLE
