httpbin.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpbin
  annotations:
    sidecar.istio.io/inject: "false"
spec:
  containers:
  - name: httpbin
    image: kennethreitz/httpbin
    ports:
    - containerPort: 80
