basic.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ipk-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: mytls
    hosts:
    - "*"
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ipk
spec:
  hosts:
  - "*"
  gateways:
  - ipk-gateway
  http:
  - match:
    - uri:
        exact: /.well-known/openid-configuration 
    route:
    - destination:
        host: ipk-hydra-public
        port:
          number: 4444
  - match:
    - uri:
        prefix: /oauth2
    route:
    - destination:
        host: ipk-hydra-public
        port:
          number: 4444
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ipk-login-ui
        port:
          number: 9442 
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ipk-authentication-gw
spec:
  hosts:
  - ipk-authentication-gw
  http:
    - route:
      - destination:
          host: ipk-authentication-gw
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ipk-hydra-admin
spec:
  hosts:
  - "admin-hydra.ipk.local"
  - "ipk-hydra-admin"
  gateways:
  - ipk-gateway
  http:
  - match:
    - uri:
        exact: /admin/clients
    route:
    - destination:
        host: ipk-hydra-admin
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ipk-scim2
spec:
  hosts:
  - "scim2.ipk.local"
  gateways:
  - ipk-gateway
  http:
  - match:
    - uri:
        exact: /api/v1/scim2/Users
    route:
    - destination:
        host: ipk-scim2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ipk-scim2-login
spec:
  hosts:
  - ipk-scim2
  http:
  - route:
    - destination:
        host: ipk-scim2
---
