dest-login-ui.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ipk-login-ui
spec:
  host: ipk-login-ui
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        maxRequestsPerConnection: 1
        http1MaxPendingRequests: 1
