vs-authentication-gw-no-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ipk-authentication-gw
spec:
  hosts:
  - ipk-authentication-gw
  http:
  - route:
    - destination:
        host: ipk-authentication-gw
