vs-scim-login-abort.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ipk-scim2-login
spec:
  hosts:
  - ipk-scim2
  http:
  - fault:
      abort:
        percentage:
          value: 70
        httpStatus: 500
    route:
    - destination:
        host: ipk-scim2
